Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="content">
 
-<img src=
+<img src="images/"
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
         
     </div>
