--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
     <div id="content">
 
-<img src="images/transportation/transit.jpg" alt>
+<img src="images/transportation/transit.jpg" alt="Transit">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
         
     </div>
