--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
 
     <div id="content">
 
-<img src="images/transportation/transit.jpg" alt="Transit">
+<img src="images/transportation/transit.jpg" alt="Modern Transit">
       <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-        
+      <h3></h3>  
     </div>
   </div>
 </body>
