--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
     <div id="content">
 
 <img src="images/transportation/transit.jpg" alt="Modern Transit">
-      <!-- IMAGES, SMALL SUB HEADS, PARAGRAPHS, LINKS -->
-      <h3></h3>  
+      
+<h3>Travel</h3>  
+      
     </div>
   </div>
 </body>
